--- a/src/components/PixelCanvas.css
+++ b/src/components/PixelCanvas.css
@@ -1,29 +1,73 @@
-/* PixelCanvas.css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  overflow: hidden; /* Impede overflow */
+}
+
+.canva-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+}
+
+.color-menu {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: row;
+  background-color: #dad9d9;
+  padding: 10px;
+  height: 70px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+}
+
+.color-swatch {
+  cursor: pointer;
+  margin: 0 5px;
+  border-radius: 5px;
+  transition: all 0.2s ease; /* Suave transição para o aumento do quadrado de cor */
+}
+
+.zoom-controls {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 10px;
+  z-index: 10;
+}
+
+.zoom-controls button {
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
 .canvas {
-    display: grid;
-    grid-template-columns: repeat(1600, 1fr);
-    grid-template-rows: repeat(900, 1fr);
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  .pixel {
-    background-color: black;
-    width: 1px;
-    height: 1px;
-    border: 1px solid transparent;
-  }
-  
-  .pixel:hover {
-    border: 1px solid white;
-  }
-  
-  .controls {
-    margin-bottom: 10px;
-  }
-  
-  button {
-    margin-right: 10px;
-  }
-  
+  border: 3px solid #000;
+  cursor: crosshair;
+}
+
+.hover-square {
+  position: absolute;
+  pointer-events: none;
+  z-index: 10;
+}
