--- a/front/src/components/PixelCanvas.css
+++ b/front/src/components/PixelCanvas.css
@@ -20,34 +20,22 @@ html, body {
   background-color: #ffffff;
 }
 
-.color-menu {
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
+.selectors{
   display: flex;
-  flex-direction: row;
-  background-color: #dad9d9;
-  padding: 10px;
-  height: 70px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-}
-
-.color-swatch {
-  cursor: pointer;
-  margin: 0 5px;
-  border-radius: 5px;
-  transition: all 0.2s ease; /* Suave transição para o aumento do quadrado de cor */
+  justify-content: center;
+  align-items: self-end;
+  gap: 90px;
+  width: 100%;
+  height: 88vh;
 }
 
 .zoom-controls {
   position: fixed;
-  top: 20px;
-  left: 50%;
+  top: 100px;
+  right: 0px;
   transform: translateX(-50%);
   display: flex;
+  flex-direction: column;
   gap: 10px;
   z-index: 10;
 }
@@ -56,9 +44,21 @@ html, body {
   padding: 10px 20px;
   cursor: pointer;
   background-color: #ffffff;
-  border: 1px solid #ccc;
+  border: 1px solid #420b3e;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  opacity: 0.9;
+  background-color: #be63da
+}
+
+.zoom-controls button:hover {
+  background-color: #bb8aca;
+  transition: .1s ease-in-out;
+}
+
+.zoom-in-img, .zoom-out-img{
+  width: 20px;
+  height: 20px;
 }
 
 .canvas {
