--- a/front/src/components/ColorSelector.css
+++ b/front/src/components/ColorSelector.css
@@ -17,7 +17,7 @@
     cursor: pointer;
     margin: 0 5px;
     border-radius: 5px;
-    transition: all 0.2s ease; /* Suave transição para o aumento do quadrado de cor */
+    transition: all 0.2s ease;
   }
   
   .color-swatch:hover {
