--- a/front/src/components/ColorSelector.css
+++ b/front/src/components/ColorSelector.css
@@ -5,7 +5,7 @@
     transform: translateX(-50%);
     display: flex;
     flex-direction: row;
-    background-color: #dad9d9;
+    background-color: #292929;
     padding: 10px;
     height: 70px;
     border-radius: 10px;
