--- a/front/src/App.css
+++ b/front/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .App-header {
-  background-color: rgba(0, 0, 0, 1);
+  background-color: rgb(20, 20, 20);
   width: 100%;
   display: flex;
   padding: 5%;
