--- a/front/src/App.css
+++ b/front/src/App.css
@@ -16,12 +16,12 @@
 }
 
 .App-header {
-  background-color: rgb(20, 20, 20);
+  background-color: #141414;
   width: 100%;
   display: flex;
   padding: 5%;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 1%;
+  padding-bottom: 1%;
   justify-content: space-between; 
   align-items: center;
   box-sizing: border-box;
