--- a/front/src/components/PixelCanvas.css
+++ b/front/src/components/PixelCanvas.css
@@ -20,6 +20,10 @@ html, body {
   background-color: #000000;
 }
 
+.canvas {
+  border: 4px solid #ffffff;
+}
+
 .selectors {
   display: flex;
   justify-content: center;
@@ -31,28 +35,36 @@ html, body {
 
 .zoom-controls {
   position: fixed;
-  top: 100px;
-  right: 0px;
+  top: 10%;
+  left: 50%;
   transform: translateX(-50%);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
   gap: 10px;
-  z-index: 10;
-  background-color: #ffffff;
-  border: 2px solid #420b3e;
+  background-color: #141414;
+  border: 1px solid #000000;
   padding: 10px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+}
+
+.magnifying-glass {
+  color: white;
+  width: 14px;
+  height: 14px;
+  cursor: pointer;
 }
 
 .zoom-slider {
   -webkit-appearance: none;
-  width: 150px;
-  height: 8px;
+  width: 100px;
+  height: 6px;
   border-radius: 5px;
-  background: #ddd;
+  background: #252525;
   outline: none;
-  opacity: 0.7;
+  opacity: 0.8;
   transition: opacity 0.2s;
 }
 
@@ -63,24 +75,19 @@ html, body {
 .zoom-slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
-  background: #be63da;
+  background: #ffffff;
   cursor: pointer;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
 .zoom-slider::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
-  background: #be63da;
+  background: #ffffff;
   cursor: pointer;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-}
-
-.canvas {
-  border: 4px solid #ffffff;
-  cursor: crosshair;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
