--- a/front/src/components/ColorSelector.css
+++ b/front/src/components/ColorSelector.css
@@ -1,25 +1,41 @@
-.color-menu {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    flex-direction: row;
-    background-color: #292929;
-    padding: 10px;
-    height: 70px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
-  }
-  
-  .color-swatch {
-    cursor: pointer;
-    margin: 0 5px;
-    border-radius: 5px;
-    transition: all 0.2s ease;
-  }
-  
-  .color-swatch:hover {
-    transform: scale(0.8);
-  }
+.color-selector {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  background-color: #141414;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+}
+
+.selected-slot {
+  width: 60px;
+  height: 60px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  border: 2px solid black;
+}
+
+.custom-slots {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.color-slot {
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  border: 2px solid transparent;
+}
+
+.color-slot.active {
+  border: 2px solid black;
+  transform: scale(1.1);
+}
